--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,7 @@ Description: More about what it does (maybe more than one line)
 License: What license is it under?
 Depends: R (>= 3.5.0)
 Encoding: UTF-8
-Imports: dplyr, purrr
+Imports: dplyr, purrr, readr, tidyr
 LazyData: true
-Collate:'conc_tsv.R' 'list_tsv.R' 'taxa_mx.R'
+Collate:'import_files.R' 'list_tsv.R' 'abundance_standard.R' 'list_csv.R' 'cleaning.R'
 RoxygenNote: 7.1.1
