--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,5 +11,5 @@ Depends: R (>= 3.5.0)
 Encoding: UTF-8
 Imports: dplyr, purrr, readr, tidyr
 LazyData: true
-Collate:'import_files.R' 'list_tsv.R' 'abundance_standard.R' 'list_csv.R' 'cleaning.R'
+Collate:'import_files.R' 'list_tsv.R' 'abundance_standard.R' 'list_csv.R' 'cleaning.R' 'abundance_vc.R'
 RoxygenNote: 7.1.1
