added host_domain function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,11 +5,13 @@ export(abundance_vc)
 export(bio_statistics)
 export(cleaning)
 export(db_exploring)
+export(host_domain)
 export(import_files)
 export(list_csv)
 export(list_tsv)
 import(KEGGREST)
 import(dplyr)
+import(janitor)
 import(vegan)
 importFrom(gtools,permutations)
 importFrom(purrr,as_vector)
